# ferrite

./: .gitignore  .npmignore  CONTRIBUTORS.md  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json  test-npm-package.mjs
.github/workflows/: ci.yml
audio-processor-core/: Cargo.toml  LICENSE_MIT  README.md  changes.md  review.md
audio-processor-core/src/: fft_processor.rs  lib.rs  noise_gate.rs  noise_profile.rs  ring_buffer.rs  spectral_smoothing.rs  spectral_subtraction.rs  utils.rs
demo/: .gitignore  README.md  index.html  live-passthrough.html  main.ts  package.json  patch-wasm-exports.js  test-memory-debug.html  test-noise-reduction.html  test-suite.ts  test-zero-copy.html  vercel.json  visualizer.ts  vite.config.js  vite.config.ts  wasm-init.js
demo/public/: noise-reducer-worker.js
demo/public/wasm/: LICENSE_MIT  README.md  package.json  wasm_audio_ferrite.d.ts  wasm_audio_ferrite.js  wasm_audio_ferrite_bg.wasm  wasm_audio_ferrite_bg.wasm.d.ts
demo/src/: wasm-loader.js
scripts/: build.sh  patch-wasm-memory.js
